src/main/resources/api/examples/errors/error-example-401.raml
#%RAML 1.0 NamedExample
values:
  message: Unauthorized 
  errors:  
    - #item 1
      "code": xxx-000
      "message": |
          Similar to 403 Forbidden, but specifically for use when authentication is possible but has failed or not yet been provided. The response must include a WWW-Authenticate header field containing a challenge applicable to the requested resource. See Basic access authentication and Digest access authentication.